Add location to profile

--- a/layouts/partials/sections/hero/index.html
+++ b/layouts/partials/sections/hero/index.html
@@ -12,6 +12,9 @@
                 <h5>
                     {{ .Site.Params.hero.subtitle }}
                 </h5>
+                <h5>
+                    {{ .Site.Params.hero.location }}
+                </h5>
                 <p class="hero-content">
                     {{ .Site.Params.hero.content | markdownify }}
                 </p>
